// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 13 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Natation\\",\\"Sports collectifs\\"],\\"other\\":\\"Civilization 6\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Guild Wars 2\\"}",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 14 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Maxime Arrouard\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 15 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "Pas assez fort (Mon sonotone est en panne)",
          },
        },
        Object {
          "node": Object {
            "value": "Assez fort (Mon sonotone est mal réglé)",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 16 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 17 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 18 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Logo 1\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 19 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Il bluffe\\"],\\"other\\":null}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Il bluffe\\"],\\"other\\":null}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Oui\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 20 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 21 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 22 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 23 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 24 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 25 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 26 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 27 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;
